# rlvr-misalignment-onset

./: .gitignore  CLAUDE.md  LICENSE  README.md  START_HERE.md  checkpoint_inventory.py  phase0_inventory.md  phase1_status.md  pyproject.toml
.claude/: settings.json
phase0/: README.md  checkpoint_inventory.py
phase1/: README.md  aggregate.py  build_datasets.py  common.py  download_model.py  eval_capability.py  generate.py  higher_token_limit.py  judge.py  plot_capability.py  run_sweep.py  score_capability.py
results/phase1/capability/: summary.csv
results/phase1/capability/higher_token_limit/: step_1300.jsonl  summary.csv
src/: common.py  generate.py  judge.py  score_capability.py
